# hello-django

./: db.sqlite3  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
flights/: admin.py  models.py  tests.py  urls.py  views.py
flights/migrations/: 0001_initial.py  0002_airport_alter_flight_destination_alter_flight_origin.py  0003_passenger.py
flights/templates/flights/: flight.html  index.html  layout.html
hello/: views.py
hello/templates/hello/: greet.html  index.html
helloDjango/: settings.py  urls.py  wsgi.py
helloDjango/helloDjango/: asgi.py
newyear/: views.py
newyear/templates/newyear/: index.html
posts/: urls.py  views.py
posts/templates/posts/: index.html
singlepage/: urls.py  views.py
singlepage/templates/singlepage/: index.html
tasks/: views.py
tasks/templates/tasks/: add.html  index.html  layout.html
users/: views.py
users/templates/users/: layout.html  login.html  user.html
